# gstreamer-tutorials

./: .gitignore  CMakeLists.txt  README.md
basic-tutorial-1/: main.c
basic-tutorial-2/: main.c
basic-tutorial-3/: main.c
basic-tutorial-4/: main.c
basic-tutorial-6/: main.c
basic-tutorial-7/: main.c
basic-tutorial-8/: main.c
building-application/: CMakeLists.txt  bus.c  bus.h  element.h  elemnt.c  intialize.c  intialize.h  main.c  pad.c  pad.h
stream_web_cam/: CMakeLists.txt  main.c
